[package]
name = "pinocchio-token-program"
version = "0.0.0"
description = "A pinocchio-based Token (aka 'p-token') program"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[features]
logging = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { workspace = true, default-features = false }
pinocchio-token-interface = { version = "^0", path = "../interface" }

[dev-dependencies]
agave-feature-set = { workspace = true }
assert_matches = "1.5.0"
mollusk-svm = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
num-traits = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-program-error = { workspace = true }
solana-program-option = { workspace = true }
solana-program-pack = { workspace = true }
solana-program-test = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-system-interface = { workspace = true , features=["bincode"] }
spl-token-interface = { workspace = true }
# spl-token-2022-interface = "2" NOTE: it was there upstream but it is not used afaik




[lints]
workspace = true
